<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="EngelInputData" Id="{0041014f-08c5-4fc3-8520-5f8525d8b5d0}">
    <Declaration><![CDATA[TYPE
    EngelInputData :
    STRUCT
        HeartBeat            : UINT;
        ManualActive         : BOOL;
        AutoActive           : BOOL;
        AutoStart            : BOOL;
        HomeRequest          : BOOL;
        HomeDone             : BOOL;
        SafetyClosed         : BOOL;
        SafetyOpeningAllowed : BOOL;

    END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>